grammar.txt
Mini-C Grammar (EBNF)
=====================

program         → declaration* EOF

declaration     → func_decl | var_decl

func_decl       → type IDENTIFIER '(' param_list? ')' block

param_list      → param (',' param)*
param           → type IDENTIFIER

var_decl        → type IDENTIFIER ('=' expr)? ';'

type            → 'int' | 'float' | 'void'

block           → '{' statement* '}'

statement       → var_decl
                | if_stmt
                | while_stmt
                | return_stmt
                | expr_stmt
                | block

if_stmt         → 'if' '(' expr ')' block ('else' (if_stmt | block))?

while_stmt      → 'while' '(' expr ')' block

return_stmt     → 'return' expr? ';'

expr_stmt       → expr ';'

expr            → assign

assign          → IDENTIFIER '=' assign
                | or_expr

or_expr         → and_expr ('||' and_expr)*

and_expr        → equality ('&&' equality)*

equality        → relational (('==' | '!=') relational)*

relational      → additive (('<' | '>' | '<=' | '>=') additive)*

additive        → multiplicative (('+' | '-') multiplicative)*

multiplicative  → unary (('*' | '/') unary)*

unary           → ('!' | '-') unary
                | primary_call

primary_call    → primary ('(' arg_list? ')')?     // function call

primary         → INT_LITERAL
                | FLOAT_LITERAL
                | 'true'
                | 'false'
                | IDENTIFIER
                | '(' expr ')'

arg_list        → expr (',' expr)*

Tokens
------
INT_LITERAL     → [0-9]+
FLOAT_LITERAL   → [0-9]+ '.' [0-9]+
IDENTIFIER      → [A-Za-z_][A-Za-z0-9_]*
Keywords        → int float void if else while return true false
